# mailsense-mcp

./: .env.example  .gitignore  Cargo.toml  GEMINI.md  Makefile  README.md  pod.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.sqlx/: query-16640e22869db2395b0a65025e645ab16732210c795a3786827216f09597cca7.json  query-3da67c4cbc33dfebf4a5feb6d9cc2af1f961cff37e63a78a6b174272ada82568.json  query-3e862dd73c466b3d1c4ab548eaac5fe7cf5a68eb468c7bcedb3ff20c43d4929f.json  query-47a27e8a5976b71ca8a1d08334b353aacb31c40cb4377cfd6d2554699b797c68.json  query-4e40be09c53d0d9d7844be46596ee9a6314b45671378daa53b1b28d2ab287228.json  query-573a3bfb593ce23bb43620330e1a84307c1139465c91d10874c91a65ff899283.json  query-603617620edbe6234955db1749663214ec6fa6a88c8ed5f2e53dc2e668197ae1.json  query-6a97a46502a9fbada23f15b571fe72bbf8d2bf07c05f4f58cd37e0f6417fa313.json  query-888ef7d64ac87598ecb72012cfd89a38a749efb40b4e033f4525fcf03755c2de.json  query-8f5167422797291f0d8ad5e9598063cdafdb15bd31c49922623b6201b9f0c47c.json  query-92ed64db3ad8fd4b0344859ba4f22fe9f0d3275bd98c5aefac199c422dd9e8d6.json  query-9cd5e9ccff12aeea3ed5b1b9118838a895a5069da9f873dd16af62f7474be40f.json  query-9d9621f8645298a8841ebca7478fdffd3bef6987625b909837f3e9cc29080652.json  query-b66a3c0afe0deef6bf2291f7e2ecc30ac496f954e383fdb29f9cb435e187c0a9.json  query-ded1571c421c6d45e5c060a70da67979b06e328f20636766c35b6ec00120ac15.json  query-e059841142e3ecd49d2dd822e35d86da40245aeefe0fc30a97bf445a9fd6c8bf.json  query-e57db494c4963442391b0ccb499b12961b7d26e3b08eecf0a1685ce6f9113523.json  query-efaa0b93a414c228777455be2c2ddbaef9c128fb1e9d437f667bdae3e1955e29.json
infra/: Makefile  pod.yaml  postgres.Dockerfile
mailsense-bin/: Cargo.toml
mailsense-bin/src/: main.rs
mailsense-core/: Cargo.toml
mailsense-core/examples/: llm_test.rs  pdf_decryption_test.rs  vector_search_test.rs
mailsense-core/src/: config.rs  domain.rs  lib.rs  llm.rs  password.rs  pdf.rs  prompt.rs  storage.rs
mailsense-imap/: Cargo.toml
mailsense-imap/examples/: fetch_emails.rs
mailsense-imap/src/: client.rs  lib.rs  tests.rs
mailsense-mcp/: Cargo.toml
mailsense-mcp/src/: protocol.rs  server.rs
migrations/: 20260503212833_initial_schema.sql  20260506120000_add_vector_support.sql  20260506141316_add_analysis_fields.sql  20260506182153_add_email_attachments.sql  20260506183704_drop_password_recipes.sql  20260506185848_drop_tasks_table.sql  20260506191137_drop_processed_emails_table.sql
