[workspace]
members = [
    "mailsense-core",
    "mailsense-imap",
    "mailsense-mcp",
    "mailsense-bin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["SquidSpirit"]
license = "GPL-3.0-only"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Local crates
mailsense-core = { path = "mailsense-core" }
mailsense-imap = { path = "mailsense-imap" }
mailsense-mcp = { path = "mailsense-mcp" }
