[workspace]
resolver = "2"
members = [
  "mailsense-bin",
  "mailsense-core",
  "mailsense-imap",
  "mailsense-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
async-trait = "0.1"
# Async runtime
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid", "json", "migrate"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# IMAP & Email Parsing
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
futures = "0.3"
mail-parser = "0.9"
native-tls = "0.2"
tokio-native-tls = "0.3"

# Testing
mockito = "1.4"

# Local crates
mailsense-core = { path = "mailsense-core" }
mailsense-imap = { path = "mailsense-imap" }
mailsense-mcp = { path = "mailsense-mcp" }
