[package]
name = "mailsense-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

mailsense-core = { workspace = true }
mailsense-imap = { workspace = true }
mailsense-mcp = { workspace = true }
